# cvyed

./: README.md  __init__.py  anillo_3d.py  animar_edp.py  campoVectorial_2d.py  campoVectorial_3d.py  cilindro.py  cono.py  derivadas.py  dominio.py  elipse.py  esfera.py  euler.py  export3d_parametric_surface.py  fig_ejes3d_cv.py  fig_ejes_cv.py  gradiente.py  grafica_sucesion.py  grilla_2d.py  grilla_3d.py  indice.py  intervalo.py  paraboloide.py  plot3d_parametric_line_CV.py  plot_campo_de_direcciones.py  plot_campo_direccional.py  plot_implicit_3d_cv.py  punto3d_cv.py  punto_cv.py  pyproject.toml  retrato_fase  retrato_fase.py  serieFourier.py  setup.py  sum_par.py  sup_nivel_cv.py  tubo_3d.py  vector3d_cv.py  vector_cv.py
CV/: __init__.py  fig_ejes3d_cv.py  sup_nivel_cv.py  tubo_3d.py
