[project]
name = "spam"
version = "2020.0.0"
description = "Lovely Spam! Wonderful Spam!"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
authors = [
  {name = "Pradyun Gedam", email = "pradyun@example.com"},
  {name = "Tzu-Ping Chung", email = "tzu-ping@example.com"},
  {name = "Another person"},
  {email = "different.person@example.com"},
]
maintainers = [
  {name = "Brett Cannon", email = "brett@python.org"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "httpx",
  "gidgethub[httpx]>4.0.0",
  "django>2.1; os_name != 'nt'",
  "django>2.0; os_name == 'nt'",
]

# dynamic = ["version", "description"]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
spam-cli = "spam:main_cli"

[project.gui-scripts]
spam-gui = "spam:main_gui"

[project.entry-points."spam.magical"]
tomatoes = "spam:main_tomatoes"

#[build-system]
#requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"

#[project]
#name = "CV"
#version = "2023.0.1"
#description = "Paquete de funciones complementarias para el dictado de la materia Cálculo Vectorial en la Facultad de Ingeniería - Universidad Nacional de Entre Ríos"
#readme = "README.md"
#requires-python = ">=3.7"
#authors = [
#    {name = "Cálculo Vectorial FIUNER", email = "calculo_vectorial@ingenieria.uner.edu.ar"},
#]
#maintainers = [
#  {name = "Joaquin Ruiz", email = "joaquin.ruiz@uner.edu.ar"}
#]
#keywords = ["multivariate calculus", "symbolic programming", "3d printing"]
#classifiers = [
#  "Development Status :: 1 - Beta",
#  "Programming Language :: Python"
#]
#dependencies = [
#    "numpy",
#    "sympy",
#    "matplotlib",
#    "scipy",
#    "surf2stl @ git+ssh://git@github.com/asahidari/surf2stl-python.git",
#]
#[project.urls]
#Repository = "https://github.com/joaquinr-uner/CV.git"
